--- a/indexx.html
+++ b/indexx.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>WLTSearch</title> 
-  <link rel="stylesheet" href="/Coin/styless.css"> 
+  <link rel="stylesheet" href="styless.css"> 
  </head> 
  <body> 
   <div class="container"> 
@@ -38,6 +38,6 @@
         </button>
     </div>
   </div> 
-  <script src="/Coin/scriptt.js"></script> 
+  <script src="scriptt.js"></script> 
  </body>
 </html>
